syntax = "proto3";

package customer.api.customer;

import "google/api/annotations.proto";

option go_package = "/customer/api/customer;customer";
option java_multiple_files = true;
option java_package = "customer.api.customer";

service Customer {
	rpc GetVerifyCode (GetVerifyCodeReq) returns (GetVerifyCodeResp) {
		option (google.api.http) = {
			get: "/customer/get-verify-code/{telephone}"	//get请求地址
		};
	}
}

message GetVerifyCodeReq {
	string telephone = 1;
}

message GetVerifyCodeResp {
	int32 code = 1;
	string message = 2;
	string verify_code = 3;
	int32 verify_code_time = 4;
}